force-app/main/default/objects/Linen_Mapping__mdt/Linen_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Linen Mapping</label>
    <pluralLabel>Linens Mapping</pluralLabel>
</CustomObject>