force-app/main/default/objects/Linen_Mapping__mdt/fields/Dry_cleaning_Load__c.field-meta.xml
<CustomField>
    <fullName>Dry_cleaning_Load__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dry cleaning Load</label>
    <type>Checkbox</type>
</CustomField>