force-app/main/default/objects/Linen_Mapping__mdt/fields/Drying__c.field-meta.xml
<CustomField>
    <fullName>Drying__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drying</label>
    <type>Checkbox</type>
</CustomField>