force-app/main/default/objects/Linen_Mapping__mdt/fields/Flat_Ironer__c.field-meta.xml
<CustomField>
    <fullName>Flat_Ironer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flat Ironer</label>
    <type>Checkbox</type>
</CustomField>