force-app/main/default/objects/Linen_Mapping__mdt/fields/Ironing_Load_Unshaped_Garments_in_Nos__c.field-meta.xml
<CustomField>
    <fullName>Ironing_Load_Unshaped_Garments_in_Nos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ironing Load Unshaped Garments  in Nos.</label>
    <type>Checkbox</type>
</CustomField>