force-app/main/default/objects/Linen_Mapping__mdt/fields/Linen__c.field-meta.xml
<CustomField>
    <fullName>Linen__c</fullName>
    <label>Linen</label>
    <length>80</length>
    <type>Text</type>
</CustomField>