force-app/main/default/objects/Linen_Mapping__mdt/fields/Linen_Weight_in_Kg__c.field-meta.xml
<CustomField>
    <fullName>Linen_Weight_in_Kg__c</fullName>
    <label>Linen Weight      in Kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>