force-app/main/default/objects/Linen_Mapping__mdt/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <label>Vertical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>