force-app/main/default/objects/Linen_Mapping__mdt/fields/Washing__c.field-meta.xml
<CustomField>
    <fullName>Washing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Washing</label>
    <type>Checkbox</type>
</CustomField>